RESOLVED FIXED32129
WebKit hangs in WebCore::Editor::advanceToNextMispelling(bool)
https://bugs.webkit.org/show_bug.cgi?id=32129
Summary WebKit hangs in WebCore::Editor::advanceToNextMispelling(bool)
Enrica Casucci
Reported 2009-12-03 11:51:58 PST
Preparing sample HTML to repro.
Attachments
Test page (92.97 KB, text/html)
2009-12-03 11:54 PST, Enrica Casucci
no flags
Patch (1.66 KB, patch)
2009-12-03 12:11 PST, Enrica Casucci
sullivan: review+
Enrica Casucci
Comment 1 2009-12-03 11:54:24 PST
Created attachment 44262 [details] Test page
Enrica Casucci
Comment 2 2009-12-03 11:59:12 PST
Repro steps: 1. open the attached HTML with the browser. 2. Click on the page to bring up the context menu. 3. Choose "Spelling and Grammar" -> "Check Document Now" EXPECTED: The document is checked for spelling errors. ACTUAL: Spinning wheel.
Enrica Casucci
Comment 3 2009-12-03 12:11:39 PST
WebKit Review Bot
Comment 4 2009-12-03 12:15:58 PST
style-queue ran check-webkit-style on attachment 44264 [details] without any errors.
Enrica Casucci
Comment 5 2009-12-03 13:50:08 PST
Committed revision 51659.
Note You need to log in before you can comment on or make changes to this bug.