SpinTracer: 349 spins in Mail at WebCore::Editor::advanceToNextMisspelling(bool) <rdar://problem/7198592> https://bugs.webkit.org/show_bug.cgi?id=32129

Reviewed by John Sullivan.

Fixed the way the next paragraph is calculated.
I've added a repro case in Safari and attached it to the Bugzilla bug.

* editing/Editor.cpp:
(WebCore::findFirstMisspellingOrBadGrammarInRange): Changed the way we move to the
next paragraph in the loop.



Canonical link: https://commits.webkit.org/43086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51659 268f45cc-cd09-0410-ab3c-d52691b4dbfc